# incremental-statics-artifact

./: .gitignore  Dockerfile  Dockerfile-tylr  README.md  overview.md
mechanization/: All.agda  Dockerfile  Makefile
mechanization/Core/: ActionCompleteness.agda  ActionErasure.agda  ActionPreservation.agda  ActionUnicity.agda  Actions.agda  Core.agda  Environment.agda  Lemmas.agda  Main.agda  Marking.agda  MarkingUnicity.agda  Progress.agda  Quiescent.agda  QuiescentValidity.agda  SideConditions.agda  Termination.agda  TypVariableUpdate.agda  TypVariableUpdateErasure.agda  TypVariableUpdatePreservation.agda  Update.agda  UpdateErasure.agda  UpdatePreservation.agda  VariableUpdate.agda  VariableUpdateErasure.agda  VariableUpdatePreservation.agda  WellFormed.agda
workbench/: Dockerfile  Makefile
workbench/_build/: .db  .digest-db  log
workbench/_build/default/.dune/: configurator  configurator.v2
workbench/_build/default/eval/: eval.re.ml
workbench/_build/default/test/: all_tests.re.ml  test_splay.re.ml  test_validity.re.ml
workbench/app/: app.re  app.rei.pp.mli
workbench/eval/: dune  eval.py  eval.re
workbench/hazelnut/: actions.re  actions.rei  actions_random.re  hazelnut.re  hazelnut.rei  incremental.re  incremental.rei  marking.re  marking.rei  order.ml  order.mli  pexp.re  pexp.rei  queue.re  queue.rei  state.re  state.rei  tree.re  tree.rei  update.re  updateProcess.re  updateProcess.rei  updateQueue.re  updateQueue.rei
workbench/test/: all_tests.re  dune  test_splay.re  test_validity.re
(+5 files in other folders)
